--- a/website/docs/best-practice/multi-adapter.mdx
+++ b/website/docs/best-practice/multi-adapter.mdx
@@ -60,7 +60,7 @@ async def handle_function(event: OnebotV11MessageEvent | OnebotV12MessageEvent, 
 ```
 
   </TabItem>
-  <TabItem value="3.8" label="Python 3.8+">
+  <TabItem value="3.9" label="Python 3.9">
 
 ```python
 from typing import Union
