:pencil2: fix link

--- a/website/docs/best-practice/alconna/README.mdx
+++ b/website/docs/best-practice/alconna/README.mdx
@@ -132,7 +132,7 @@ async def got_location(location: str):
 或阅读 [Alconna 基本介绍](./command.md) 一节。
 
 关于更多 `on_alconna` 的使用方法，可参考 [插件文档](https://github.com/nonebot/plugin-alconna/blob/master/docs.md)，
-或阅读 [响应规则的使用](./matcher.md) 一节。
+或阅读 [响应规则的使用](./matcher.mdx) 一节。
 
 ## 交流与反馈
 
