--- a/website/docs/best-practice/alconna/matcher.mdx
+++ b/website/docs/best-practice/alconna/matcher.mdx
@@ -3,13 +3,14 @@ sidebar_position: 3
 description: 响应规则的使用
 ---
 
+import Messenger from "@site/src/components/Messenger";
+
 # Alconna 插件
 
 展示：
 
 ```python
-from nonebot_plugin_alconna.adapters.onebot12 import Image
-from nonebot_plugin_alconna import At, on_alconna
+from nonebot_plugin_alconna import At, Image, on_alconna
 from arclet.alconna import Args, Option, Alconna, Arparma, MultiVar, Subcommand
 
 
@@ -30,8 +31,8 @@ rg = on_alconna(alc, auto_send_output=True)
 @rg.handle()
 async def _(result: Arparma):
     if result.find("list"):
-        img = await ob12_gen_role_group_list_image()
-        await rg.finish(Image(img))
+        img: bytes = await gen_role_group_list_image()
+        await rg.finish(Image(raw=img))
     if result.find("add"):
         group = await create_role_group(result.query[str]("add.name"))
         if result.find("add.member"):
@@ -42,7 +43,7 @@ async def _(result: Arparma):
 
 ## 响应器使用
 
-本插件基于 **Alconna**，为 **Nonebot** 提供了一类新的事件响应器辅助函数 `on_alconna`：
+本插件基于 **Alconna**，为 **Nonebot** 提供了一类新的事件响应器辅助函数 `on_alconna`：
 
 ```python
 def on_alconna(
@@ -61,10 +62,10 @@ def on_alconna(
 ):
 ```
 
-- `command`: Alconna 命令或字符串，字符串将通过 `AlconnaFormat` 转换为 Alconna 命令
+- `command`: Alconna 命令或字符串，字符串将通过 `AlconnaFormat` 转换为 Alconna 命令
 - `skip_for_unmatch`: 是否在命令不匹配时跳过该响应
 - `auto_send_output`: 是否自动发送输出信息并跳过响应
-- `aliases`: 命令别名， 作用类似于 `on_command` 中的 aliases
+- `aliases`: 命令别名， 作用类似于 `on_command` 中的 aliases
 - `comp_config`: 补全会话配置， 不传入则不启用补全会话
 - `extensions`: 需要加载的匹配扩展, 可以是扩展类或扩展实例
 - `exclude_ext`: 需要排除的匹配扩展, 可以是扩展类或扩展的id
@@ -72,14 +73,14 @@ def on_alconna(
 - `use_cmd_start`: 是否使用 COMMAND_START 作为命令前缀
 - `use_cmd_sep`: 是否使用 COMMAND_SEP 作为命令分隔符
 
-`on_alconna` 返回的是 `Matcher` 的子类 `AlconnaMatcher` ，其拓展了如下方法：
+`on_alconna` 返回的是 `Matcher` 的子类 `AlconnaMatcher` ，其拓展了如下方法：
 
-- `.assign(path, value, or_not)`: 用于对包含多个选项/子命令的命令的分派处理（具体请看[条件控制](./matcher.md#条件控制)）
-- `.got_path(path, prompt, middleware)`: 在 `got` 方法的基础上，会以 path 对应的参数为准，读取传入 message 的最后一个消息段并验证转换
-- `.set_path_arg(key, value)`, `.get_path_arg(key)`: 类似 `set_arg` 和 `got_arg`，为 `got_path` 的特化版本
-- `.reject_path(path[, prompt, fallback])`: 类似于 `reject_arg`，对应 `got_path`
-- `.dispatch`: 同样的分派处理，但是是类似 `CommandGroup` 一样返回新的 `AlconnaMatcher`
-- `.got`, `send`, `reject`, ... : 拓展了 prompt 类型，即支持使用 `UniMessage` 作为 prompt
+- `.assign(path, value, or_not)`: 用于对包含多个选项/子命令的命令的分派处理（具体请看[条件控制](./matcher.mdx#条件控制)）
+- `.got_path(path, prompt, middleware)`: 在 `got` 方法的基础上，会以 path 对应的参数为准，读取传入 message 的最后一个消息段并验证转换
+- `.set_path_arg(key, value)`, `.get_path_arg(key)`: 类似 `set_arg` 和 `got_arg`，为 `got_path` 的特化版本
+- `.reject_path(path[, prompt, fallback])`: 类似于 `reject_arg`，对应 `got_path`
+- `.dispatch`: 同样的分派处理，但是是类似 `CommandGroup` 一样返回新的 `AlconnaMatcher`
+- `.got`, `send`, `reject`, ... : 拓展了 prompt 类型，即支持使用 `UniMessage` 作为 prompt
 
 实例：
 
@@ -88,7 +89,7 @@ from nonebot import require
 require("nonebot_plugin_alconna")
 
 from arclet.alconna import Alconna, Option, Args
-from nonebot_plugin_alconna import on_alconna, AlconnaMatch, Match, UniMessage
+from nonebot_plugin_alconna import on_alconna, Match, UniMessage
 
 
 login = on_alconna(Alconna(["/"], "login", Args["password?", str], Option("-r|--recall"))) # 这里["/"]指命令前缀必须是/
@@ -96,13 +97,13 @@ login = on_alconna(Alconna(["/"], "login", Args["password?", str], Option("-r|--
 # /login -r 触发
 @login.assign("recall")
 async def login_exit():
-    await login.finish("已退出")
+    await login.finish("已退出")
 
 # /login xxx 触发
 @login.assign("password")
-async def login_handle(pw: Match[str] = AlconnaMatch("password")):
-    if pw.available:
-        login.set_path_arg("password", pw.result)
+async def login_handle(pw: Match[str]):
+    if pw.available:
+        login.set_path_arg("password", pw.result)
 
 # /login 触发
 @login.got_path("password", prompt=UniMessage.template("{:At(user, $event.get_user_id())} 请输入密码"))
@@ -115,24 +116,24 @@ async def login_got(password: str):
 
 本插件提供了一系列依赖注入函数，便于在响应函数中获取解析结果：
 
-- `AlconnaResult`: `CommandResult` 类型的依赖注入函数
-- `AlconnaMatches`: `Arparma` 类型的依赖注入函数
-- `AlconnaDuplication`: `Duplication` 类型的依赖注入函数
-- `AlconnaMatch`: `Match` 类型的依赖注入函数
-- `AlconnaQuery`: `Query` 类型的依赖注入函数
+- `AlconnaResult`: `CommandResult` 类型的依赖注入函数
+- `AlconnaMatches`: `Arparma` 类型的依赖注入函数
+- `AlconnaDuplication`: `Duplication` 类型的依赖注入函数
+- `AlconnaMatch`: `Match` 类型的依赖注入函数
+- `AlconnaQuery`: `Query` 类型的依赖注入函数
 
-同时，基于 [`Annotated` 支持](https://github.com/nonebot/nonebot2/pull/1832)，添加了两类注解：
+同时，基于 [`Annotated` 支持](https://github.com/nonebot/nonebot2/pull/1832)，添加了两类注解：
 
-- `AlcMatches`：同 `AlconnaMatches`
-- `AlcResult`：同 `AlconnaResult`
+- `AlcMatches`：同 `AlconnaMatches`
+- `AlcResult`：同 `AlconnaResult`
 
 可以看到，本插件提供了几类额外的模型：
 
-- `CommandResult`: 解析结果，包括了源命令 `source: Alconna` ，解析结果 `result: Arparma`，以及可能的输出信息 `output: str | None` 字段
-- `Match`: 匹配项，表示参数是否存在于 `all_matched_args` 内，可用 `Match.available` 判断是否匹配，`Match.result` 获取匹配的值
-- `Query`: 查询项，表示参数是否可由 `Arparma.query` 查询并获得结果，可用 `Query.available` 判断是否查询成功，`Query.result` 获取查询结果
+- `CommandResult`: 解析结果，包括了源命令 `source: Alconna` ，解析结果 `result: Arparma`，以及可能的输出信息 `output: str | None` 字段
+- `Match`: 匹配项，表示参数是否存在于 `all_matched_args` 内，可用 `Match.available` 判断是否匹配，`Match.result` 获取匹配的值
+- `Query`: 查询项，表示参数是否可由 `Arparma.query` 查询并获得结果，可用 `Query.available` 判断是否查询成功，`Query.result` 获取查询结果
 
-**Alconna** 默认依赖注入的目标参数皆不需要使用依赖注入函数， 该效果对于 `AlconnaMatcher.got_path` 下的 Arg 同样有效：
+**Alconna** 默认依赖注入的目标参数皆不需要使用依赖注入函数， 该效果对于 `AlconnaMatcher.got_path` 下的 Arg 同样有效：
 
 ```python
 async def handle(
@@ -217,26 +218,25 @@ async def handle_test4(qux: Query[bool] = Query("baz.qux", False)):
 
 本插件为以下适配器提供了专门的适配器标注：
 
-| 协议名称                                                            | 路径                                 |
-| ------------------------------------------------------------------- | ------------------------------------ |
-| [OneBot 协议](https://github.com/nonebot/adapter-onebot)            | adapters.onebot11, adapters.onebot12 |
+| 协议名称                                                                | 路径                                 |
+|---------------------------------------------------------------------| ------------------------------------ |
+| [OneBot 协议](https://github.com/nonebot/adapter-onebot)              | adapters.onebot11, adapters.onebot12 |
 | [Telegram](https://github.com/nonebot/adapter-telegram)             | adapters.telegram                    |
-| [飞书](https://github.com/nonebot/adapter-feishu)                   | adapters.feishu                      |
+| [飞书](https://github.com/nonebot/adapter-feishu)                     | adapters.feishu                      |
 | [GitHub](https://github.com/nonebot/adapter-github)                 | adapters.github                      |
 | [QQ bot](https://github.com/nonebot/adapter-qq)                     | adapters.qq                          |
-| [QQ 频道 bot](https://github.com/nonebot/adapter-qq)                | adapters.qqguild                     |
-| [钉钉](https://github.com/nonebot/adapter-ding)                     | adapters.ding                        |
+| [钉钉](https://github.com/nonebot/adapter-ding)                       | adapters.ding                        |
+| [Dodo](https://github.com/nonebot/adapter-dodo)                     | adapters.dodo                        |
 | [Console](https://github.com/nonebot/adapter-console)               | adapters.console                     |
-| [开黑啦](https://github.com/Tian-que/nonebot-adapter-kaiheila)      | adapters.kook                        |
+| [开黑啦](https://github.com/Tian-que/nonebot-adapter-kaiheila)         | adapters.kook                        |
 | [Mirai](https://github.com/ieew/nonebot_adapter_mirai2)             | adapters.mirai                       |
 | [Ntchat](https://github.com/JustUndertaker/adapter-ntchat)          | adapters.ntchat                      |
 | [MineCraft](https://github.com/17TheWord/nonebot-adapter-minecraft) | adapters.minecraft                   |
 | [BiliBili Live](https://github.com/wwweww/adapter-bilibili)         | adapters.bilibili                    |
 | [Walle-Q](https://github.com/onebot-walle/nonebot_adapter_walleq)   | adapters.onebot12                    |
-| [Villa](https://github.com/CMHopeSunshine/nonebot-adapter-villa)    | adapters.villa                       |
 | [Discord](https://github.com/nonebot/adapter-discord)               | adapters.discord                     |
-| [Red 协议](https://github.com/nonebot/adapter-red)                  | adapters.red                         |
-| [Satori 协议](https://github.com/nonebot/adapter-satori)            | adapters.satori                      |
+| [Red 协议](https://github.com/nonebot/adapter-red)                    | adapters.red                         |
+| [Satori 协议](https://github.com/nonebot/adapter-satori)              | adapters.satori                      |
 
 ## 条件控制
 
@@ -341,7 +341,7 @@ async def tt(target: Union[str, At]):
 
 ## 响应器创建装饰
 
-本插件提供了一个 `funcommand` 装饰器, 其用于将一个接受任意参数， 返回 `str` 或 `Message` 或 `MessageSegment` 的函数转换为命令响应器：
+本插件提供了一个 `funcommand` 装饰器, 其用于将一个接受任意参数， 返回 `str` 或 `Message` 或 `MessageSegment` 的函数转换为命令响应器：
 
 ```python
 from nonebot_plugin_alconna import funcommand
@@ -369,7 +369,7 @@ async def echo_exit(msg: Match[str] = AlconnaMatch("msg")):
 
 ## 类Koishi构造器
 
-本插件提供了一个 `Command` 构造器，其基于 `arclet.alconna.tools` 中的 `AlconnaString`， 以类似 `Koishi` 中注册命令的方式来构建一个 **AlconnaMatcher** ：
+本插件提供了一个 `Command` 构造器，其基于 `arclet.alconna.tools` 中的 `AlconnaString`， 以类似 `Koishi` 中注册命令的方式来构建一个 **AlconnaMatcher** ：
 
 ```python
 from nonebot_plugin_alconna import Command, Arparma
@@ -389,7 +389,7 @@ async def _(arp: Arparma):
     await book.send(str(arp.options))
 ```
 
-甚至，你可以设置 `action` 来设定响应行为：
+甚至，你可以设置 `action` 来设定响应行为：
 
 ```python
 book = (
@@ -403,9 +403,9 @@ book = (
 )
 ```
 
-## 返回值回调
+## 返回值中间件
 
-在 `AlconnaMatch`，`AlconnaQuery` 或 `got_path` 中，你可以使用 `middleware` 参数来传入一个对返回值进行处理的函数：
+在 `AlconnaMatch`，`AlconnaQuery` 或 `got_path` 中，你可以使用 `middleware` 参数来传入一个对返回值进行处理的函数：
 
 ```python
 from nonebot_plugin_alconna import image_fetch
@@ -422,13 +422,13 @@ async def mask_h(matcher: AlconnaMatcher, img: Match[bytes] = AlconnaMatch("img"
     await matcher.send(result.content)
 ```
 
-其中，`image_fetch` 是一个中间件，其接受一个 `Image` 对象，并提取图片的二进制数据返回。
+其中，`image_fetch` 是一个中间件，其接受一个 `Image` 对象，并提取图片的二进制数据返回。
 
 ## 匹配拓展
 
-本插件提供了一个 `Extension` 类，其用于自定义 AlconnaMatcher 的部分行为
+本插件提供了一个 `Extension` 类，其用于自定义 AlconnaMatcher 的部分行为
 
-例如 `LLMExtension` (仅举例)：
+例如一个 `LLMExtension` 可以如下实现 (仅举例)：
 
 ```python
 from nonebot_plugin_alconna import Extension, Alconna, on_alconna, Interface
@@ -467,14 +467,15 @@ matcher = on_alconna(
 ...
 ```
 
-那么添加了 `LLMExtension` 的响应器便能接受任何能通过 llm 翻译为具体命令的自然语言消息，同时可以在响应器中为所有 `llm` 参数注入模型变量。
+那么添加了 `LLMExtension` 的响应器便能接受任何能通过 llm 翻译为具体命令的自然语言消息，同时可以在响应器中为所有 `llm` 参数注入模型变量。
 
-目前 `Extension` 的功能有：
+目前 `Extension` 的功能有：
 
 - `validate`: 对于事件的来源适配器或 bot 选择是否接受响应
 - `output_converter`: 输出信息的自定义转换方法
 - `message_provider`: 从传入事件中自定义提取消息的方法
 - `receive_provider`: 对传入的消息 (Message 或 UniMessage) 的额外处理
+- `context_provider`: 对命令上下文的额外处理
 - `permission_check`: 命令对消息解析并确认头部匹配（即确认选择响应）时对发送者的权限判断
 - `parse_wrapper`: 对命令解析结果的额外处理
 - `send_wrapper`: 对发送的消息 (Message 或 UniMessage) 的额外处理
@@ -482,7 +483,7 @@ matcher = on_alconna(
 - `catch`: 自定义依赖注入处理函数
 - `post_init`: 响应器创建后对命令对象的额外处理
 
-例如内置的 `DiscordSlashExtension`，其可自动将 Alconna 对象翻译成 slash 指令并注册，且将收到的指令交互事件转为指令供命令解析：
+例如内置的 `DiscordSlashExtension`，其可自动将 Alconna 对象翻译成 slash 指令并注册，且将收到的指令交互事件转为指令供命令解析：
 
 ```python
 from nonebot_plugin_alconna import Match, on_alconna
@@ -513,3 +514,62 @@ async def remove(plugin: Match[str], time: Match[int]):
 全局的 Extension 可延迟加载 (即若有全局拓展加载于部分 AlconnaMatcher 之后，这部分响应器会被追加拓展)
 
 :::
+
+## 补全会话
+
+补全会话基于 [`半自动补全`](./command.md#半自动补全)，用于指令参数缺失或参数错误时给予交互式提示，类似于 `got-reject`：
+
+```python
+from nonebot_plugin_alconna import Alconna, Args, Field, At, on_alconna
+
+alc = Alconna(
+    "添加教师",
+    Args["name", str, Field(completion=lambda: "请输入姓名")],
+    Args["phone", int, Field(completion=lambda: "请输入手机号")],
+    Args["at", [str, At], Field(completion=lambda: "请输入教师号")],
+)
+
+cmd = on_alconna(alc, comp_config={"lite": True}, skip_for_unmatch=False)
+
+@cmd.handle()
+async def handle(result: Arparma):
+    cmd.finish("添加成功")
+```
+
+此时，当用户输入 `添加教师` 时，会自动提示用户输入姓名，手机号和教师号，用户输入后会自动进入下一个提示：
+
+<Messenger
+  msgs={[
+    { position: "right", msg: "添加教师" },
+    { position: "left", msg: "以下是建议的输入： \n- name: 请输入姓名" },
+    { position: "right", msg: "foo" },
+    { position: "left", msg: "以下是建议的输入： \n- phone: 请输入手机号" },
+    { position: "right", msg: "12345" },
+    { position: "left", msg: "以下是建议的输入： \n- at: 请输入教师号" },
+    { position: "right", msg: "@me" },
+    { position: "left", msg: "添加成功" },
+  ]}
+/>
+
+
+补全会话配置如下：
+
+```python
+class CompConfig(TypedDict):
+    tab: NotRequired[str]
+    """用于切换提示的指令的名称"""
+    enter: NotRequired[str]
+    """用于输入提示的指令的名称"""
+    exit: NotRequired[str]
+    """用于退出会话的指令的名称"""
+    timeout: NotRequired[int]
+    """超时时间"""
+    hide_tabs: NotRequired[bool]
+    """是否隐藏所有提示"""
+    hides: NotRequired[Set[Literal["tab", "enter", "exit"]]]
+    """隐藏的指令"""
+    disables: NotRequired[Set[Literal["tab", "enter", "exit"]]]
+    """禁用的指令"""
+    lite: NotRequired[bool]
+    """是否使用简洁版本的补全会话（相当于同时配置 disables、hides、hide_tabs）"""
+```
