--- a/website/docs/best-practice/database/README.mdx
+++ b/website/docs/best-practice/database/README.mdx
@@ -77,7 +77,7 @@ SQLALCHEMY_DATABASE_URL=sqlite+aiosqlite:///file_path
 
 ### PostgreSQL
 
-[PostgreSQL](https://www.postgresql.org/) 是世界上最先进的开源关系数据库，对各种高级且广泛应用的功能有最好的支持，是中小型应用的首选数据库。
+[PostgreSQL](https://www.postgresql.org/) 是世界上最先进的开源关系数据库之一，对各种高级且广泛应用的功能有最好的支持，是中小型应用的首选数据库。
 
 <Tabs groupId="install">
 <TabItem value="pip" label="使用 pip">
