📝 修正 匹配扩展 中的示例

--- a/website/docs/best-practice/alconna/matcher.mdx
+++ b/website/docs/best-practice/alconna/matcher.mdx
@@ -487,7 +487,7 @@ matcher = on_alconna(
 
 ```python
 from nonebot_plugin_alconna import Match, on_alconna
-from nonebot_plugin_alconna.builtins.plugins.discord import DiscordSlashExtension
+from nonebot_plugin_alconna.builtins.extensions.discord import DiscordSlashExtension
 
 
 alc = Alconna(
