--- a/website/versioned_docs/version-2.3.0/best-practice/testing/behavior.mdx
+++ b/website/versioned_docs/version-2.3.0/best-practice/testing/behavior.mdx
@@ -56,7 +56,7 @@ def make_event(message: str = "") -> MessageEvent:
         time=datetime.now(),
         self_id="test",
         message=Message(message),
-        user=User(user_id=123456789),
+        user=User(id="user"),
     )
 
 @pytest.mark.asyncio
@@ -95,7 +95,7 @@ def make_event(message: str = "") -> MessageEvent:
         time=datetime.now(),
         self_id="test",
         message=Message(message),
-        user=User(user_id=123456789),
+        user=User(id="user"),
     )
 
 @pytest.mark.asyncio
@@ -131,7 +131,7 @@ def make_event(message: str = "") -> MessageEvent:
         time=datetime.now(),
         self_id="test",
         message=Message(message),
-        user=User(user_id=123456789),
+        user=User(id="user"),
     )
 
 @pytest.mark.asyncio
@@ -202,7 +202,7 @@ def make_event(message: str = "") -> MessageEvent:
         time=datetime.now(),
         self_id="test",
         message=Message(message),
-        user=User(user_id=123456789),
+        user=User(id="user"),
     )
 
 @pytest.mark.asyncio
@@ -264,7 +264,7 @@ def make_event(message: str = "") -> MessageEvent:
         time=datetime.now(),
         self_id="test",
         message=Message(message),
-        user=User(user_id=123456789),
+        user=User(id="user"),
     )
 
 @pytest.mark.asyncio
